--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-pydantic-ai[anthropic]>=0.0.14
-python-dotenv>=1.0.0
-anthropic>=0.39.0
-langsmith>=0.1.0
-httpx>=0.27.0
-airbyte-agent-gong>=0.19.30
-airbyte-agent-hubspot>=0.15.29
-gradio>=4.0.0
+# Core AI framework - requires 1.0+ for load_mcp_servers function
+pydantic-ai-slim[anthropic,mcp]>=1.0
+
+# API client - will be constrained by pydantic-ai-slim
+anthropic>=0.75.0
+
+# Utilities
+python-dotenv~=1.0.1
+langsmith~=0.1.147
+
+# Airbyte connectors
+airbyte-agent-gong
+airbyte-agent-hubspot
+
+# UI framework
+gradio~=4.44.1
